<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tab_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab1_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tab_name"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"
        android:text="@string/currency1_value"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="textStart"/>

    <Spinner
        android:id="@+id/currency1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/input1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/currency1_name"/>

    <Button
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/currency1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:text="@string/currency2_value"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="textStart"/>

    <Spinner
        android:id="@+id/currency2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/input2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/currency2_name"/>

    <TextView
        android:id="@+id/exchange_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/currency2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/exchange_rate" />

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/exchange_rate"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/update_day" />

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/first_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/empty"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/CE_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_CE"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/BS_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_BS"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/row1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/seven_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_7"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/eight_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_8"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/nine_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_9"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/row2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/four_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_4"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/five_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_5"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/six_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_6"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/row3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/one_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/two_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_2"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/three_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_3"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/row4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/last_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/empty"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/zero_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_0"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/dot_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/button_dot"
            android:textColor="@color/black" />


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>